--- a/lang/text-en.json
+++ b/lang/text-en.json
@@ -9,7 +9,7 @@
   },
   "home": {
     "title": "A Boutique Events Company Based in London",
-    "content": "Our services include event management, venue finding, meetings & conference management and overseas events. Whether it is a meeting, gala dinner or incentive, we can take the stress out of your events and save you time, money and energy.",
+    "content": "Our services include event management, venue finding, meetings & conference management and overseas events.",
     "button": "Learn More"
   },
   "about": {
