--- a/lang/text-cn.json
+++ b/lang/text-cn.json
@@ -13,7 +13,8 @@
     "button": "了解更多"
   },
   "about": {
-    "content": "紫藤会是位于伦敦的一家专注于商业活动策划和私人定制派对的精品活动策划公司。针对任何预算，我们为客户提供非常个性化的定制服务，确保活动的各个方面都创造出最精细的细节。无论在英国还是海外，我们极富创造力，丰富经验和支持力的团队与客户紧密合作，共同制作盛大的活动。"
+    "first_paragraph": "紫藤会是位于伦敦的一家专注于商业活动策划和私人定制派对的精品活动策划公司。针对任何预算，我们为客户提供非常个性化的定制服务，确保活动的各个方面都创造出最精细的细节。无论在英国还是海外，我们极富创造力，丰富经验和支持力的团队与客户紧密合作，共同制作盛大的活动。",
+    "second_paragraph": "我们的服务包括活动管理，场地调查，会议管理和海外活动。无论是会议，庆祝晚宴还是，我们都可以帮您从活动策划管理中解脱压力，为您节省时间，金钱和精力。"
   },
   "services": {
     "hand_painting": "手绘创意",
