--- a/lang/text-cn.json
+++ b/lang/text-cn.json
@@ -31,22 +31,22 @@
   },
   "team": {
     "names": {
-      "first": "Jing Jing Ma",
-      "second": "Ning Jing Gao",
-      "third": "Kathy Hui Wong",
-      "forth": "Zhiyan Yu"
+      "first": "马静静",
+      "second": "高宁静",
+      "third": "左慧",
+      "forth": "于志艳"
     },
     "positions": {
-      "first": "Business Development and Marketing",
-      "second": "Membership Maintenance and Development",
-      "third": "Enterprise’s Financial Management and Normal Maintenance",
-      "forth": "Client Management and Improving Internal Trading Process"
+      "first": "商业拓展及市场",
+      "second": "会员维护及发展",
+      "third": "企业财务管理及日常维护",
+      "forth": "客户管理及内部交易过程优化"
     },
     "descs": {
-      "first": "Jing Jing Ma is a qualified lawyer in China. She graduated from the law school of Fu Dan University in 1999 and was awarded a Bachelor’s degree in International Law. She obtained a license to practice law in 2000 and worked in both law firms and international companies from 1999 and 2014. In total she has 15 years of professional experience in a range of legal roles. Her most recent experience was with Dacheng Dentons Law Firm before moving to London. She is familiar with Chinese law and has strong experience with communicating with Chinese clients. She will be mainly responsible for business development and marketing.",
-      "second": "Ning Jing Gao studied for a BSc in Accounting at Tianjin University of Finance and Economics between 1998 and 2002. She obtained her ACCA qualification after moving to London. She worked as Project Accountant, Fund Accountant and Finance Manager between 2008 to 2012. She will primarily be responsible for the Wisteria  Club’s membership maintenance and development.",
-      "third": "Kathy Hui Wong studied for a BA Accounting & Finance at Lancaster University between 1999 and 2002 and she was awarded a 2:1. From 2002 to 2005 she worked as a Financial Accountant for Design Portfolio Ltd. She then worked as a Management Accountant for the British Standard Institution from 2005 to 2007. Kathy will be responsible for the Enterprise’s financial management and normal maintenance.",
-      "forth": "Zhiyan Yu, completed the BSc Computing Science and Business Management in the University of Manchester. She studied MSc Economics Study in London School of Economics and graduated with first class honour. From 2006 to 2012, she has been working in Goldman Sachs as trading  support, massively involved in client mangement and improving internal trading process."
+      "first": "持有中国注册律师执照，1999年毕业于中国复旦大学法学院并获得国际法专业学士学位。2000年获得律师执照后，在1999年至2014年期间，供职于同时包括律师事务所及外资公司。在法律专业上，拥有超过15年以上，不同法律角色的行业专业经验。来到伦敦前，供职于达成丹顿律师事务所。对中国相关法律极为熟悉，并在对中国客户的合作交流中拥有丰富的经验，将主要负责紫藤会的商务拓展及市场。",
+      "second": "1998至2002年就读于天津财经大学金融会计专业。来到伦敦后成为了ACCA注册会计师。2008至2012期间，分别担任过项目会计师，基金会计师及财务经理多个职位。今后将主要负责紫藤会的会员维护及发展。",
+      "third": "1999至2002年就读于兰卡斯特大学金融会计专业，并以2：1的成绩获得学士学位。2002至2005期间，担任 Design Portfolio Ltd 金融会计师，此后以管理会计师身份为英国标准协会工作（2005-2007），将主要负责紫藤会企业财务管理及日常维护",
+      "forth": "本科毕业于曼彻斯特大学计算机科学及商务管理专业。并以一等的成绩获得伦敦政经金融学专业硕士。2006年至2012年期间，为高盛投资公司提供交易支持， 将主要涉及紫藤会客户管理及内部交易过程优化。"
     }
   },
   "footer": {
