--- a/lang/text-en.json
+++ b/lang/text-en.json
@@ -31,10 +31,10 @@
   },
   "team": {
     "names": {
-      "first": "Jing Jing Ma",
-      "second": "Ning Jing Gao",
-      "third": "Kathy Hui Wong",
-      "forth": "Zhiyan Yu"
+      "first": "Jingjing Ma",
+      "second": "Ningjing Gao",
+      "third": "Kathy Wong",
+      "forth": "ZhiYan Yu"
     },
     "positions": {
       "first": "Business Development and Marketing",
@@ -43,10 +43,10 @@
       "forth": "Client Management and Improving Internal Trading Process"
     },
     "descs": {
-      "first": "Jing Jing Ma is a qualified lawyer in China. She graduated from the law school of Fu Dan University in 1999 and was awarded a Bachelor’s degree in International Law. She obtained a license to practice law in 2000 and worked in both law firms and international companies from 1999 and 2014. In total she has 15 years of professional experience in a range of legal roles. Her most recent experience was with Dacheng Dentons Law Firm before moving to London. She is familiar with Chinese law and has strong experience with communicating with Chinese clients. She will be mainly responsible for business development and marketing.",
-      "second": "Ning Jing Gao studied for a BSc in Accounting at Tianjin University of Finance and Economics between 1998 and 2002. She obtained her ACCA qualification after moving to London. She worked as Project Accountant, Fund Accountant and Finance Manager between 2008 to 2012. She will primarily be responsible for the Wisteria  Club’s membership maintenance and development.",
-      "third": "Kathy Hui Wong studied for a BA Accounting & Finance at Lancaster University between 1999 and 2002 and she was awarded a 2:1. From 2002 to 2005 she worked as a Financial Accountant for Design Portfolio Ltd. She then worked as a Management Accountant for the British Standard Institution from 2005 to 2007. Kathy will be responsible for the Enterprise’s financial management and normal maintenance.",
-      "forth": "Zhiyan Yu, completed the BSc Computing Science and Business Management in the University of Manchester. She studied MSc Economics Study in London School of Economics and graduated with first class honour. From 2006 to 2012, she has been working in Goldman Sachs as trading  support, massively involved in client mangement and improving internal trading process."
+      "first": "Qualified lawyer in China. She graduated from the law school of Fu Dan University in 1999 and was awarded a Bachelor’s degree in International Law. She obtained a license to practice law in 2000 and worked in both law firms and international companies from 1999 and 2014. In total she has 15 years of professional experience in a range of legal roles. Her most recent experience was with Dacheng Dentons Law Firm before moving to London. She is familiar with Chinese law and has strong experience with communicating with Chinese clients. She will be mainly responsible for business development and marketing.",
+      "second": "Studied for a BSc in Accounting at Tianjin University of Finance and Economics between 1998 and 2002. She obtained her ACCA qualification after moving to London. She worked as Project Accountant, Fund Accountant and Finance Manager between 2008 to 2012. She will primarily be responsible for the Wisteria  Club’s membership maintenance and development.",
+      "third": "Studied for a BA Accounting & Finance at Lancaster University between 1999 and 2002 and she was awarded a 2:1. From 2002 to 2005 she worked as a Financial Accountant for Design Portfolio Ltd. She then worked as a Management Accountant for the British Standard Institution from 2005 to 2007. Kathy will be responsible for the Enterprise’s financial management and normal maintenance.",
+      "forth": "Completed the BSc Computing Science and Business Management in the University of Manchester. She studied MSc Economics Study in London School of Economics and graduated with first class honour. From 2006 to 2012, she has been working in Goldman Sachs as trading  support, massively involved in client mangement and improving internal trading process."
     }
   },
   "footer": {
