--- a/lang/text-cn.json
+++ b/lang/text-cn.json
@@ -47,7 +47,8 @@
       "second": "1998至2002年就读于天津财经大学金融会计专业。来到伦敦后成为了ACCA注册会计师。2008至2012期间，分别担任过项目会计师，基金会计师及财务经理多个职位。今后将主要负责紫藤会的会员维护及发展。",
       "third": "1999至2002年就读于兰卡斯特大学金融会计专业，并以2：1的成绩获得学士学位。2002至2005期间，担任 Design Portfolio Ltd 金融会计师，此后以管理会计师身份为英国标准协会工作（2005-2007），将主要负责紫藤会企业财务管理及日常维护",
       "forth": "本科毕业于曼彻斯特大学计算机科学及商务管理专业。并以一等的成绩获得伦敦政经金融学专业硕士。2006年至2012年期间，为高盛投资公司提供交易支持， 将主要涉及紫藤会客户管理及内部交易过程优化。"
-    }
+    },
+    "button": "后退"
   },
   "footer": {
     "site_map": "网站导航",
